src/pattern/snapshots/duvet__pattern__tests__missing_new_line.snap
---
source: src/pattern/tests.rs
expression: "parse(\"//=,//#\",\n    r#\"\n    //= https://example.com/spec.txt\n    //# Here is my citation\"#)"
---
Ok(
    [
        Annotation {
            source: "file.rs",
            anno_line: 2,
            anno_column: 7,
            item_line: 3,
            item_column: 0,
            path: "",
            anno: Citation,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "",
            manifest_dir: "/",
            level: Auto,
            format: Auto,
            tracking_issue: "",
            feature: "",
            tags: {},
        },
    ],
)
